--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
         padding: 1.2rem 1.5rem;
         border-radius: 16px;
         margin-top: 1.2rem;
-        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
+        box-shadow: 0 6px 20px rgba(0, 0,  0, 0.12);
         transition: transform 0.3s, box-shadow 0.3s;
         backdrop-filter: blur(8px) saturate(130%);
         border: 1px solid rgba(255, 255, 255, 0.6);
@@ -1267,7 +1267,9 @@
           >
         </p>
         <p>
-          <a href="https://www.linkedin.com/feed/" target="_blank"
+          <a
+            href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"
+            target="_blank"
             >Voir mon profil LinkedIn</a
           >
         </p>
@@ -1572,6 +1574,16 @@
             target="_blank"
           >
             <span>Mise en place et tests d’un atelier ACL (contrôle d’accès)</span>
+          </a>
+
+          <!-- AJOUT mission formation 6 (GLPI) -->
+          <a
+            href="https://cerfal-my.sharepoint.com/:w:/r/personal/d_gouedart_cfacampusmontsouris_fr/Documents/mission%20formation%206.docx?d=w6996f59592164a9c81257823b778fa1d&csf=1&web=1&e=QtwEXM"
+            class="mission-card tap-bump"
+            download
+            target="_blank"
+          >
+            <span>Mise en place d’un serveur GLPI (outil de ticketing et gestion de parc)</span>
           </a>
         </div>
       </section>
