--- a/index.html
+++ b/index.html
@@ -1307,9 +1307,10 @@
             <li>
               Administration système (Windows Server 2022, Active Directory)
             </li>
+            <li>Administration Microsoft 365 (utilisateurs, boîtes mail, groupes, etc.)</li>
             <li>Réseaux et configuration DHCP, DNS, routage</li>
             <li>Sécurité informatique (pare-feu, sauvegarde, audit)</li>
-            <li>Virtualisation (VirtualBox, Hyper-V)</li>
+            <li>Virtualisation (VirtualBox, Proxmox, VMware)</li>
           </ul>
         </div>
 
@@ -1369,8 +1370,7 @@
             charge des incidents, demandes de services, installation de
             logiciels, assistance à distance et accompagnement au quotidien.
             <em
-              >Outils : GLPI / outil de ticketing, suite Microsoft 365, prise en
-              main à distance (RDP, AnyDesk/TeamViewer), messagerie Outlook,
+              >Outils : suite Microsoft 365, prise en main à distance (AnyDesk), messagerie Outlook,
               téléphone IP.</em
             >
           </li>
@@ -1379,8 +1379,8 @@
             des postes, imprimantes, smartphones, tablettes, écrans et
             périphériques, gestion des licences logicielles et renouvellements.
             <em
-              >Outils : inventaire matériel (GLPI ou équivalent), tableurs de
-              suivi, Active Directory, outils de déploiement d’images (WDS/MDT,
+              >Outils : application Power Apps (gestion de parc), Microsoft Entra ID, Active Directory,
+              tableurs de suivi, outils de déploiement d’images (WDS/MDT,
               Clonezilla), outils de télédistribution.</em
             >
           </li>
@@ -1400,7 +1400,7 @@
             de la connectivité entre les sites et des liaisons Internet.
             <em
               >Outils : consoles d’administration des équipements réseau
-              (Cisco/HP ou équivalent), Wireshark, outils de supervision réseau
+              (Extreme Networks), Wireshark, outils de supervision réseau
               (Centreon, PRTG, Zabbix), portails Wi-Fi.</em
             >
           </li>
@@ -1419,9 +1419,7 @@
             planification des sauvegardes des serveurs et données critiques,
             tests de restauration, suivi de la capacité de stockage.
             <em
-              >Outils : solutions de sauvegarde (Veeam, Iperius Backup ou
-              équivalent), NAS et baies de stockage, scripts de sauvegarde,
-              tableaux de bord de supervision.</em
+              >Outils : NAS.</em
             >
           </li>
           <li>
@@ -1562,15 +1560,11 @@
           </tr>
         </table>
 
-        <!-- Lien Excel du tableau de synthèse (local) -->
+        <!-- Lien Excel du tableau de synthèse -->
         <div class="downloads">
           <h4>📎 Téléchargements</h4>
           <ul>
             <li>
-              <a href="docs/tableau_synthese.xlsx" download target="_blank"
-                >Télécharger le tableau de synthèse (Excel)</a
-              >
-
               <a
                 href="https://cerfal-my.sharepoint.com/:x:/r/personal/d_gouedart_cfacampusmontsouris_fr/Documents/6-%20Annexe%206-1%20-%20Tableau%20de%20synth%C3%A8se%20-%20Epreuve%20E4%20-%20BTS%20SIO%202023(1)%201%20(1)%201%20(1).xlsx?d=w7e17be3aaae74b8ab48284ea5029cac5&csf=1&web=1&e=MBAwnh"
                 target="_blank"
